[metadata]
name = colcon-graphviz-anim
version = attr: colcon_graphviz_anim.__version__
url = https://colcon.github.io
download_url = https://github.com/colcon/colcon-graphviz-anim/releases
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to create an animation of the progress.
keywords = colcon

[options]
install_requires =
  colcon-core
  GraphvizAnim
packages = find:
tests_require =
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pyenchant
  pylint
  pytest
  pytest-cov
zip_safe = true

[options.entry_points]
colcon_core.environment_variable =
    graphviz_anim = colcon_graphviz_anim.event_handler.graphviz_anim:ANIMATION_PROGRESS_ENVIRONMENT_VARIABLE
colcon_core.event_handler =
    graphviz_anim = colcon_graphviz_anim.event_handler.graphviz_anim:GraphvizAnimEventHandler
